# ADXL343.rs

./: Cargo.toml
examples/: read-data.rs
